# trans_schedule

./: readme.md
API_Parsing/: CMakeLists.txt  main.c
DISPLAY/: CMakeLists.txt  README.md
DISPLAY/app/: CMakeLists.txt
DISPLAY/app/include/: displaylogic.h
DISPLAY/app/src/: displaylogic.c  main.c
NFC-TTS Demo/: CMakeLists.txt  flite.pc  flite_install.txt  libnfc_install.txt
NFC-TTS Demo/app/: CMakeLists.txt
NFC-TTS Demo/app/src/: main.c
NFC-TTS Demo/hal/: CMakeLists.txt
NFC-TTS Demo/hal/include/: nfc-utils.h  utils.h
NFC-TTS Demo/hal/src/: nfc-utils.c  utils.c
project/: CMakeLists.txt
project copy/: CMakeLists.txt  Makefile  README.md
project copy/app/: CMakeLists.txt
project copy/app/include/: alphabet.h  displaylogic.h  main.h
project copy/app/src/: alphabet.c  displaylogic.c  main.c
project copy/hal/: CMakeLists.txt
project copy/hal/include/hal/: readNWrite.h  threadsControl.h  useAPI.h  useJoyStick.h  useNFC.h  usePWM.h  useTTS.h
project copy/hal/src/: readNWrite.c  threadsControl.c  useAPI.c  useJoyStick.c  useNFC.c  usePWM.c  useTTS.c
project/app/: CMakeLists.txt
project/app/include/: alphabet.h  displaylogic.h  main.h
project/app/src/: alphabet.c  displaylogic.c  main.c
project/hal/include/hal/: threadsControl.h  useAPI.h  useJoyStick.h  useNFC.h  usePWM.h
project/hal/src/: readNWrite.c  threadsControl.c  useAPI.c  useJoyStick.c  useNFC.c  useTTS.c
spi/: spi.c  spiProgram  spiProgram.c
spi/Display/spi/: compileCommand.txt  spi.c  spiProgram
